# passwordmanager

./: .env  .env.example  .gitignore  =4.12.0  CONTRIBUTING.md  FINAL_SUMMARY.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.py  PROJECT_SUMMARY.py  QUICK_REFERENCE.md  README.md  STATUS.md  config.py  main.py  passwordmanager.py  passwords.db  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
data/: passwords.db
docs/: ARCHITECTURE_NEW.md  MIGRATION_GUIDE.md  PROJECT_COMPLETION_CHECKLIST.md  PROJECT_REFACTORING_SUMMARY.txt  REFACTORING_CHANGELOG.md
docs_and_info/: ARCHITECTURE.md  FIXES_APPLIED.md  PROJECT_INFO.py  PROJECT_STATS.txt  QUICKSTART.md  README.md  requirements-dev.txt  test_imports.py
scripts/: init_db.py  init_user.py
src/: __init__.py  config.py  mainfgh.py  utils.py
src/bootstrap/: container.py  wiring.py
src/bot/: __init__.py  handlers.py  keyboards.py  states.py
src/bot/handlers/: __init__.py  auth.py  password.py
src/core/application/dto/: password_input.py  password_output.py  user_context.py
src/core/application/services/: password_evaluator.py  password_generator.py  password_masker.py
src/core/application/use_cases/: create_password.py  delete_password.py  get_password.py  list_passwords.py  update_password.py
src/core/domain/entities/: password_entry.py  user.py
src/core/domain/enums/: category.py  cipher_type.py
src/core/domain/exceptions/: password_not_found.py  unauthorized.py  weak_password.py
src/core/domain/policies/: password_policy.py  user_policy.py
src/core/domain/value_objects/: email.py  encrypted_password.py  password_strenght.py  url.py
src/core/ports/: encryption.py  key_derivation.py  key_store.py  repositories.py
src/database/: __init__.py  crud.py  db.py  models.py
src/infrastructure/config/: logging.py  settings.py
src/infrastructure/crypto/encryption/: aes_gcm_service.py  fernet_service.py
src/infrastructure/crypto/key_derivation/: argon2_kdf.py
src/infrastructure/crypto/key_store/: memory_key_store.py  os_keyring_store.py
src/infrastructure/entrypoints/telegram/: .gitignore  bot.py  handlers.py  keyboards.py  middlewares.py  presenters.py
src/infrastructure/persistence/: database.py
src/infrastructure/persistence/models/: password_model.py  user_model.py
src/infrastructure/persistence/repositories/: sqlite_repository.py
src/security/: __init__.py  encryption.py  validators.py
src/services/: __init__.py  auth.py  password.py
tests/: __init__.py  test_database.py  test_structure.py  test_validators.py
